src/objects/Intake_Referrals__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of items for intake referrals.</description>
    <fields>
        <fullName>Locations__c</fullName>
        <description>Comma separated list of locations</description>
        <inlineHelpText>Comma separated list of locations</inlineHelpText>
        <label>Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Column__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Column</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used during the intake process.</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>Intake Referrals</label>
</CustomObject>